--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="s20c1062rk@s.chibakodai.jp">szkkt</maintainer>
+  <maintainer email="s20c1062rk@s.chibakodai.jp">Suzuki Keita</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
